@@ -7,10 +7,16 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
+    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jasperreports.version>5.6.0</jasperreports.version>
         <itext.version>2.1.7</itext.version>
         <poi.version>3.13</poi.version>
         <junit.version>4.12</junit.version>
+        <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
+        <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
+        <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
+        <maven-shade-plugin.version>2.4.2</maven-shade-plugin.version>
+        <launch4j-maven-plugin.version>1.7.8</launch4j-maven-plugin.version>
     </properties>
 
     <dependencies>
@@ -34,6 +40,31 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
         </dependency>
+		<dependency>
+			<groupId>com.akathist.maven.plugins.launch4j</groupId>
+			<artifactId>launch4j-maven-plugin</artifactId>
+			<version>${launch4j-maven-plugin.version}</version>
+		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 			<artifactId>maven-shade-plugin</artifactId> -->
+<!-- 			<version>${maven-shade-plugin.version}</version> -->
+<!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-assembly-plugin</artifactId>
+			<version>${maven-assembly-plugin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>${maven-compiler-plugin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-jar-plugin</artifactId>
+			<version>${maven-jar-plugin.version}</version>
+		</dependency>
     </dependencies>
 
     <build>
@@ -41,7 +72,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+				<version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
@@ -50,7 +81,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
+				<version>${maven-assembly-plugin.version}</version>
                 <configuration>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -66,7 +97,7 @@
                         <id>make-my-jar-with-dependencies</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>single</goal>
+                            <goal>attached</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -74,6 +105,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -82,91 +114,66 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>1.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <shadedArtifactAttached>true</shadedArtifactAttached> <!-- Make the shaded artifact not the main one -->
-                    <shadedClassifierName>shaded</shadedClassifierName> <!-- set the suffix to the shaded jar -->
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.bluestemsoftware.open.maven.plugin</groupId>
-                <artifactId>launch4j-plugin</artifactId>
-                <version>1.5.0.0</version>
-                <executions>
-
-                    <!-- GUI exe -->
-                    <execution>
-                        <id>l4j-gui</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>launch4j</goal>
-                        </goals>
-                        <configuration>
-                            <headerType>gui</headerType>
-                            <outfile>target/app-gui.exe</outfile>
-                            <jar>target/${artifactId}-${version}-shaded.jar</jar> <!-- 'shaded' is the value set on shadedClassifierName above -->
-                            <errTitle>App Err</errTitle>
-                            <classPath>
-                                <mainClass>ki.optisoins.OptiSoins</mainClass>
-                            </classPath>
-                            <icon>src/main/resources/icons/exeIcon.ico</icon>
-                            <jre>
-                                <minVersion>1.7.0</minVersion>
-                                <maxVersion>1.8.0</maxVersion>
-                                <initialHeapSize>128</initialHeapSize>
-                                <maxHeapSize>1024</maxHeapSize>
-                            </jre>
-                            <versionInfo>
-                                <fileVersion>1.0.0.0</fileVersion>
-                                <txtFileVersion>1.0.0.0</txtFileVersion>
-                                <fileDescription>Desc</fileDescription>
-                                <copyright>C</copyright>
-                                <productVersion>1.0.0.0</productVersion>
-                                <txtProductVersion>1.0.0.0</txtProductVersion>
-                                <productName>Product</productName>
-                                <internalName>Product</internalName>
-                                <originalFilename>App.exe</originalFilename>
-                            </versionInfo>
-                        </configuration>
-                    </execution>
-
-                    <!-- Command-line exe -->
-                    <execution>
-                        <id>l4j-cli</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>launch4j</goal>
-                        </goals>
-                        <configuration>
-                            <headerType>console</headerType>
-                            <outfile>target/app-cli.exe</outfile>
-                            <jar>target/${artifactId}-${version}-shaded.jar</jar> <!-- 'shaded' is the value set on shadedClassifierName above -->
-                            <errTitle>App Err</errTitle>
-                            <classPath>
-                                <mainClass>ki.optisoins.OptiSoins</mainClass>
-                            </classPath>
-                            <icon>src/main/resources/icons/exeIcon.ico</icon>
-                            <jre>
-                                <minVersion>1.7.0</minVersion>
-                                <maxVersion>1.8.0</maxVersion>
-                                <initialHeapSize>128</initialHeapSize>
-                                <maxHeapSize>1024</maxHeapSize>
-                            </jre>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+<!--             <plugin> -->
+<!--                 <groupId>org.apache.maven.plugins</groupId> -->
+<!--                 <artifactId>maven-shade-plugin</artifactId> -->
+<!-- 				<version>${maven-shade-plugin.version}</version> -->
+<!--                 <executions> -->
+<!--                     <execution> -->
+<!--                         <phase>package</phase> -->
+<!--                         <goals> -->
+<!--                             <goal>shade</goal> -->
+<!--                         </goals> -->
+<!--                     </execution> -->
+<!--                 </executions> -->
+<!--                 <configuration> -->
+<!--                     <shadedArtifactAttached>true</shadedArtifactAttached> Make the shaded artifact not the main one -->
+<!--                     <shadedClassifierName>shaded</shadedClassifierName> set the suffix to the shaded jar -->
+<!--                 </configuration> -->
+<!--             </plugin> -->
+			<plugin>
+          		<groupId>com.akathist.maven.plugins.launch4j</groupId>
+          		<artifactId>launch4j-maven-plugin</artifactId>
+			<version>${launch4j-maven-plugin.version}</version>
+          <executions>
+            <execution>
+              <id>l4j-clui</id>
+              <phase>package</phase>
+              <goals>
+              	<goal>launch4j</goal>
+              </goals>
+              <configuration>
+              	<icon>src/main/resources/icons/exeIcon.ico</icon>
+                <headerType>console</headerType>
+                <outfile>target/optisoins-${project.version}.exe</outfile>
+					<jar>target/optisoins-${project.version}-jar-with-dependencies.jar</jar>
+                <errTitle>Erreur</errTitle>
+                <classPath>
+                  <mainClass>ki.optisoins.OptiSoins</mainClass>
+                  <addDependencies>true</addDependencies>
+                  <preCp>anything</preCp>
+                </classPath>
+                <jre>
+                  <minVersion>1.8.0</minVersion>
+                  <opts>
+                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
+                  </opts>
+                </jre>
+                <versionInfo>
+                  <fileVersion>0.0.0.1</fileVersion>
+                  <txtFileVersion>version alpha</txtFileVersion>
+                  <fileDescription>optisoins</fileDescription>
+                  <copyright>Kilian Stein</copyright>
+                  <productVersion>0.0.0.1</productVersion>
+                  <txtProductVersion>optisoins</txtProductVersion>
+                  <productName>optisoins</productName>
+                  <internalName>optisoins</internalName>
+                  <originalFilename>optisoins.exe</originalFilename>
+                </versionInfo>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
         </plugins>
     </build>
 
